# basecradle-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: self-exit.sh
.claude/skills/bot-auth-setup/: SKILL.md
.claude/skills/config-home-install/: SKILL.md
.claude/skills/cross-repo-handoffs/: SKILL.md
.claude/skills/harness-release-deploy/: SKILL.md
.github/workflows/: ci.yml  release.yml
deploy/: README.md  basecradle-harness-cleanup@.service  basecradle-harness-cleanup@.timer
docs/: harness-internals.md
scripts/: check_release.py
src/basecradle_harness/: __init__.py  __main__.py  _assets.py  _audio.py  _basecradle.py  _brief.py  _caching.py  _cleanup.py  _code.py  _confirmed.py  _context.py  _delete.py  _engine.py  _exceptions.py  _faults.py  _governance.py  _grok.py  _harness.py  _http.py  _idempotency.py  _images.py  _install.py  _lock.py  _mcp.py  _media.py  _memory.py  _memory_provider.py  _mempalace.py  _messages.py  _model_params.py  _observability.py  _openai.py  _openai_wire.py  _openrouter.py  _platform.py  _plugins.py  _policy.py  _probe.py  _provider.py  _reads.py  (+15 more)
src/basecradle_harness/_defaults/prompts/: initialize.md  system-prompt.md
src/basecradle_harness/_defaults/tools/: assets.py  code_execution.py  delete.py  edit_image.py  generate_image.py  grok_edit_image.py  grok_generate_image.py  grok_generate_video.py  hear_audio.py  lock.py  memory.py  messages.py  openrouter_search.py  shell.py  system_prompt.py  tasks.py  timelines.py  trust.py  users.py  web_fetch.py  web_search.py  webhook_endpoints.py  webhook_events.py  xai_account_balance.py  xai_search.py
tests/: conftest.py  test_assets.py  test_audio.py  test_basecradle_io.py  test_brief.py  test_caching.py  test_check_release.py  test_cleanup.py  test_code.py  test_context.py  test_delete.py  test_engine.py  test_faults.py  test_governance.py  test_grok.py  test_harness.py  test_idempotency.py  test_images.py  test_install.py  test_lock.py  test_mcp.py  test_memory.py  test_memory_provider.py  test_mempalace.py  test_messages.py  test_model_params.py  test_observability.py  test_openai_wire.py  test_openrouter.py  test_openrouter_live.py  test_platform.py  test_plugins.py  test_probe.py  test_provider.py  test_readme.py  test_reads.py  test_redrive.py  test_report.py  test_responses.py  test_rest_identity.py  (+17 more)
