[project]
name = "basecradle-harness"
dynamic = ["version"]
description = "A safe, modular agentic framework for BaseCradle — a communications platform where humans and AI are equal peers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Drawk Kwast" }]
keywords = ["basecradle", "ai", "agents", "agentic", "framework", "harness"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = ["basecradle>=0.6"]

# The harness reaches an LLM only through a vendor's official SDK — never hand-rolled HTTP.
# The core depends on NO vendor SDK; each agent installs only the extra its AI_SDK names, so
# the SDK version is pinned *in the extra* and tracked alongside the harness version on
# upgrade. `pip install basecradle-harness[openai]` is the @jt / OpenAI stack; with no SDK
# extra installed the harness comes up with no way to reach a model and says so plainly.
[project.optional-dependencies]
# The `openai` vendor SDK (AI_SDK=openai): the one adapter v0 ships. Drives the model loop
# (Responses + Chat Completions), the server-side web_search built-in, vision, and the
# gpt-image-2 / audio endpoints — all through this package, no harness-owned HTTP.
# Pin: floor is the version Milestone 1 was built and tested against (2.43); major-capped so a
# breaking 3.0 never auto-upgrades — the pin is bumped deliberately, in lockstep with the
# harness version (issue #158), and `basecradle-harness-wake --version` reports both.
openai = ["openai>=2.43,<3"]
# The native xAI SDK (AI_SDK=xai-sdk): the Grok personas' end-state brain (issue #165). A
# gRPC client — grok chat + tool calling + Live Search, natively, no OpenAI-wire shim. Floor is
# the version this adapter was built against (1.17); major-capped so a breaking 2.0 never
# auto-upgrades. Kept out of the base install so the core stays light; an xai-sdk agent installs it.
xai-sdk = ["xai-sdk>=1.17,<2"]
# The OpenRouter SDK (AI_SDK=openrouter): a first-class native adapter over OpenRouter's own
# first-party Python SDK — the brain for the @glm-5.2 peer (z-ai/glm-5.2) and any OpenRouter
# model. Floor is the version this adapter was built against (0.11.3). This is a 0.x
# Speakeasy-generated SDK: its *minor* is the breaking axis (typed signatures and `components`
# names can drift on a minor bump), so it is minor-capped (`<0.12`) — bump the cap deliberately,
# never blindly. Kept out of the base install so the core stays light; an openrouter agent installs it.
openrouter = ["openrouter>=0.11.3,<0.12"]
# The MemPalace memory provider (a reference `MemoryProvider`): a local-first OSS memory
# system (ChromaDB + SQLite). Kept out of the base install so the core stays light — the
# adapter imports it lazily and is only used when HARNESS_MEMORY_PROVIDER=mempalace.
mempalace = ["mempalace>=3.4"]

[project.scripts]
# The router invokes this once per platform event: `basecradle-harness-wake --timeline <uuid>`.
basecradle-harness-wake = "basecradle_harness._wake:main"
# Scaffold (and upgrade) the operator's config home: prompts/, tools/, mcp/, and the shipped
# charter defaults. Idempotent — a fleet rollout re-runs it per agent over a pinned version.
basecradle-harness-install = "basecradle_harness._install:main"
# GC the on-box artifacts of deleted timelines: the NOC schedules `--sweep` per agent on a
# cadence (deploy/). Sweep-only; memory (memory.db + the MemPalace palace) is never touched.
basecradle-harness-cleanup = "basecradle_harness._cleanup:main"

[project.urls]
Homepage = "https://basecradle.com"
Documentation = "https://basecradle.com/docs/api"
Source = "https://github.com/basecradle/basecradle-harness"
Issues = "https://github.com/basecradle/basecradle-harness/issues"

[dependency-groups]
# `openai` is a dev dep so the test suite exercises the real SDK adapter offline (respx
# mocks its httpx transport); in production it ships only via the `openai` optional extra.
# `openai` and `xai-sdk` are dev deps so the suite exercises both real SDK adapters offline —
# openai's httpx transport is respx-mocked; the xai-sdk (gRPC) adapter builds real protos and
# runs against an injected fake client, so neither ever touches the network. In production each
# ships only via its optional extra.
# `openrouter` is likewise a dev dep so the suite exercises the real OpenRouter SDK adapter
# offline — the SDK's httpx transport is respx-mocked, so it never touches the network.
dev = [
    "pytest>=8",
    "respx>=0.22",
    "ruff>=0.9",
    "openai>=2.43,<3",
    "xai-sdk>=1.17,<2",
    "openrouter>=0.11.3,<0.12",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/basecradle_harness/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/basecradle_harness"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Live tests hit a real provider endpoint (a paid model call) and need a real key, so they are
# their own explicitly-marked job, deselected from the default offline run (`-m "not live"`).
# Opt in with `uv run pytest -m live` once the right key is in the environment.
addopts = "-m 'not live'"
markers = [
    "live: hits a real provider endpoint (real key, real network, costs a model call); excluded from the default run",
]
